<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_host"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="@dimen/elevation_8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ocean6"
            android:paddingStart="@dimen/padding_50dp"
            android:paddingEnd="@dimen/padding_50dp"
            android:id="@+id/host_layer">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/logo_60dp"
                android:layout_height="@dimen/logo_60dp"
                android:layout_marginTop="@dimen/margin_80dp"
                android:src="@drawable/image_icon"
                app:layout_constraintStart_toStartOf="@id/host_layer"
                app:layout_constraintTop_toTopOf="@id/host_layer"
                android:contentDescription="@string/company_logo"/>

            <TextView
                android:id="@+id/slogan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_30dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/enjoy_the_trip_nwith_me"
                android:textColor="@color/white"
                android:textSize="@dimen/text_34sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo" />

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:fontFamily="@font/nunito_semibold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="@dimen/padding_20dp"
                app:backgroundTint="@color/button_orange"
                android:background="@drawable/button_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/slogan" />

            <Button
                android:id="@+id/signInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:fontFamily="@font/nunito_semibold"
                app:backgroundTint="@color/white"
                android:textColor="@color/button_orange"
                android:layout_marginTop="@dimen/margin_15dp"
                android:padding="@dimen/padding_20dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/button_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signUpButton" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>